Fix for dark mode - media queries for toolbar on mobile; (#1975)

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -336,6 +336,15 @@ html.dark-mode {
       }
     }
   }
+  @media only screen and (max-width: 768px) {
+    #mapButton {
+      background-color: transparent;
+      button,
+      a {
+        background-color: var(--dm-color-darker);
+      }
+    }
+  }
 }
 
 /* public/css/base/_common.css */
